--- a/index.html
+++ b/index.html
@@ -1183,6 +1183,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="/dist/js/main.js"></script>
+    <script src="dist/js/main.js"></script>
   </body>
 </html>
