--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
             </form>
           </div>
         </div>
-        <div data-aos="fade-left" data-aos-duration="1000">
+        <div>
           <div class="">
             <h2 class="text-white text-xl font-poppins mt-3 md:mt-0">
               Contact Me
@@ -860,7 +860,11 @@
           </div>
           <div class="mt-2 relative">
             <a href="mailto:ridoferdian3@gmail.com" target="_blank">
-              <div class="bg-card rounded w-full p-1">
+              <div
+                class="bg-card rounded w-full p-1"
+                data-aos="fade-up"
+                data-aos-duration="700"
+              >
                 <div class="flex">
                   <svg
                     class="h-12 w-12"
@@ -900,7 +904,11 @@
               class=""
               target="_blank"
             >
-              <div class="bg-card rounded w-full p-2 mt-2">
+              <div
+                class="bg-card rounded w-full p-2 mt-2"
+                data-aos="fade-up"
+                data-aos-duration="800"
+              >
                 <div class="flex">
                   <svg
                     class="w-10 h-10"
@@ -946,7 +954,11 @@
               </div>
             </a>
             <a href="https://github.com/ridferdian" target="_blank">
-              <div class="bg-card rounded w-full p-2 mt-2">
+              <div
+                class="bg-card rounded w-full p-2 mt-2"
+                data-aos="fade-up"
+                data-aos-duration="900"
+              >
                 <div class="flex">
                   <svg
                     class="w-9 h-9"
@@ -1007,7 +1019,11 @@
               href="www.linkedin.com/in/rido-ferdian-krisna-0b0563270"
               target="_blank"
             >
-              <div class="bg-card rounded w-full p-2 mt-2">
+              <div
+                class="bg-card rounded w-full p-2 mt-2"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+              >
                 <div class="flex">
                   <svg
                     class="w-10 h-10"
