--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="!overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,9 +15,9 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
-  <body class="bg-primary relative">
+  <body class="bg-primary relative !overflow-x-hidden">
     <!-- Background decorations -->
-    <div
+    <!-- <div
       class="fixed inset-0 overflow-hidden pointer-events-none"
       style="z-index: 0"
     >
@@ -26,7 +26,7 @@
       <div class="floating-shape shape-3"></div>
       <div class="floating-shape shape-4"></div>
       <div class="floating-shape shape-5"></div>
-    </div>
+    </div> -->
     <!-- <div class="grid-pattern"></div> -->
 
     <div class="relative">
@@ -304,7 +304,7 @@
         >
           <div
             class="w-full my-10 order-2 text-start sm:w-1/2 px-3"
-            data-aos="fade-left"
+            data-aos="fade-up"
             data-aos-duration="1000"
           >
             <p class="text-base font-fira-code text-headline">
