--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-primary relative !overflow-x-hidden">
     <!-- Background decorations -->
-    <!-- <div
+    <div
       class="fixed inset-0 overflow-hidden pointer-events-none"
       style="z-index: 0"
     >
@@ -27,7 +27,7 @@
       <div class="floating-shape shape-4"></div>
       <div class="floating-shape shape-5"></div>
     </div> -->
-    <!-- <div class="grid-pattern"></div> -->
+    <!-- <div class="grid-pattern"></div>
 
     <div class="relative">
       <header
