--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg-primary relative !overflow-x-hidden">
-    <!-- Background decorations -->
     <div
       class="fixed inset-0 overflow-hidden pointer-events-none"
       style="z-index: 0"
@@ -26,8 +25,7 @@
       <div class="floating-shape shape-3"></div>
       <div class="floating-shape shape-4"></div>
       <div class="floating-shape shape-5"></div>
-    </div> -->
-    <!-- <div class="grid-pattern"></div>
+    </div>
 
     <div class="relative">
       <header
