--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
           >
             <p class="text-base font-fira-code text-headline">
               Halo!! Saya seorang mahasiswa yang memiliki keinginan untuk
-              menjadi backend dev.Saya tertarik dengan dunia pemogramman karena
-              sangat seru untuk di pelajari
+              menjadi Backend Dev.Saya tertarik dengan dunia pemogramman karena
+              sangat seru untuk dipelajari.
             </p>
           </div>
           <div
