--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <!-- about me  -->
     <section id="about" class="mt-20 scroll-mt-20">
       <div class="text-center" data-aos="fade-up" data-aos-duration="800">
-        <h1 class="font-poppins text-3xl text-headline font-semibold">
+        <h1 class="font-nunito text-3xl text-headline font-semibold">
           About Me
         </h1>
       </div>
@@ -307,7 +307,7 @@
             data-aos="fade-up"
             data-aos-duration="1000"
           >
-            <p class="text-base font-fira-code text-headline">
+            <p class="text-base font-poppins text-headline">
               Halo!! Saya seorang mahasiswa yang memiliki keinginan untuk
               menjadi Backend Dev.Saya tertarik dengan dunia pemogramman karena
               sangat seru untuk dipelajari.
@@ -332,9 +332,7 @@
     <!-- skills -->
     <section id="skills" class="mt-30 scroll-mt-20 py-20">
       <div class="text-center" data-aos="fade-up" data-aos-duration="800">
-        <h1 class="font-poppins text-3xl text-headline font-semibold">
-          Skills
-        </h1>
+        <h1 class="font-nunito text-3xl text-headline font-semibold">Skills</h1>
       </div>
 
       <div class="mt-10 mx-7">
@@ -671,7 +669,7 @@
     <!-- project -->
     <section id="project" class="mt-30 scroll-mt-20">
       <div class="text-center" data-aos="fade-up" data-aos-duration="800">
-        <h1 class="font-poppins text-3xl text-headline font-semibold">
+        <h1 class="font-nunito text-3xl text-headline font-semibold">
           Project
         </h1>
       </div>
@@ -688,7 +686,7 @@
               class="rounded-md shadow-xl overflow-hidden w-full aspect-video"
             >
               <img
-                src="dist/img/project/dkb.png"
+                src="dist/img/project/dkb/dkb.png"
                 alt="Dewan Kesenian Blambangan"
                 class="w-full h-full object-cover group-hover:scale-110 duration-500 ease-in-out transition-transform"
               />
@@ -706,7 +704,7 @@
               </p>
               <div class="flex justify-end">
                 <a
-                  href="profile-kelas.html"
+                  href="project/dewan-kesenian-blambangan.html"
                   class="button-project inline-flex items-center gap-2 group/btn border-2 border-secondary py-2 px-2 rounded hover:bg-secondary hover:text-headline transition duration-300 ease-in-out"
                 >
                   <span>Detail</span>
@@ -729,7 +727,7 @@
               class="rounded-md shadow-xl overflow-hidden w-full aspect-video"
             >
               <img
-                src="dist/img/project/pengaduan.png"
+                src="dist/img/project/pengaduan/pengaduan.png"
                 alt="Pengaduan Masyarakat"
                 class="w-full h-full object-cover group-hover:scale-110 duration-500 ease-in-out transition-transform"
               />
@@ -746,7 +744,7 @@
               </p>
               <div class="flex justify-end">
                 <a
-                  href="profile-kelas.html"
+                  href="project/pengaduan-masyarakat.html"
                   class="button-project inline-flex items-center gap-2 group/btn border-2 border-secondary py-2 px-2 rounded hover:bg-secondary hover:text-headline transition duration-300 ease-in-out"
                 >
                   <span>Detail</span>
@@ -769,7 +767,7 @@
               class="rounded-md shadow-xl overflow-hidden w-full aspect-video"
             >
               <img
-                src="dist/img/project/kelas.png"
+                src="dist/img/project/kelas/kelas.png"
                 alt="Profil Kelas"
                 class="w-full h-full object-cover group-hover:scale-110 duration-500 ease-in-out transition-transform"
               />
@@ -786,7 +784,7 @@
               </p>
               <div class="flex justify-end">
                 <a
-                  href="profile-kelas.html"
+                  href="project/profil-kelas-xii-tkj-1.html"
                   class="button-project inline-flex items-center gap-2 group/btn border-2 border-secondary py-2 px-2 rounded hover:bg-secondary hover:text-headline transition duration-300 ease-in-out"
                 >
                   <span>Detail</span>
@@ -809,7 +807,7 @@
               class="rounded-md shadow-xl overflow-hidden w-full aspect-video"
             >
               <img
-                src="dist/img/project/rental.png"
+                src="dist/img/project/rental/rental.png"
                 alt="Sistem Peminjaman Buku"
                 class="w-full h-full object-cover group-hover:scale-110 duration-500 ease-in-out transition-transform"
               />
@@ -826,7 +824,7 @@
               </p>
               <div class="flex justify-end">
                 <a
-                  href="profile-kelas.html"
+                  href="project/peminjaman-buku.html"
                   class="button-project inline-flex items-center gap-2 group/btn border-2 border-secondary py-2 px-2 rounded hover:bg-secondary hover:text-headline transition duration-300 ease-in-out"
                 >
                   <span>Detail</span>
@@ -849,7 +847,47 @@
               class="rounded-md shadow-xl overflow-hidden w-full aspect-video"
             >
               <img
-                src="dist/img/project/stand.png"
+                src="dist/img/project/inventaris/inventaris.png"
+                alt="Sistem Peminjaman Buku"
+                class="w-full h-full object-cover group-hover:scale-110 duration-500 ease-in-out transition-transform"
+              />
+            </div>
+            <div class="text-headline font-nunito">
+              <h2
+                class="font-bold text-lg mt-3 md:text-xl lg:text-2xl group-hover:text-secondary transition-colors duration-300"
+              >
+                Inventaris
+              </h2>
+              <p class="text-xs font-Poppins md:text-sm mb-4">
+                inventaris adalah sebuah aplikasi web yang dirancang untuk
+                mengelola dan melacak inventaris barang dalam suatu ...
+              </p>
+              <div class="flex justify-end">
+                <a
+                  href="project/inventaris.html"
+                  class="button-project inline-flex items-center gap-2 group/btn border-2 border-secondary py-2 px-2 rounded hover:bg-secondary hover:text-headline transition duration-300 ease-in-out"
+                >
+                  <span>Detail</span>
+                  <span
+                    class="group-hover/btn:translate-x-1 transition-transform duration-300"
+                    >→</span
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="bg-card p-4 mb-12 rounded-md border-2 border-transparent hover:border-secondary group duration-300 ease-in-out overflow-hidden transition-all hover:shadow-2xl"
+          data-aos="fade-up"
+          data-aos-duration="800"
+        >
+          <div class="relative z-5">
+            <div
+              class="rounded-md shadow-xl overflow-hidden w-full aspect-video"
+            >
+              <img
+                src="dist/img/project/stand/stand.png"
                 alt="Sistem Peminjaman Buku"
                 class="w-full h-full object-cover group-hover:scale-110 duration-500 ease-in-out transition-transform"
               />
@@ -867,7 +905,7 @@
               </p>
               <div class="flex justify-end">
                 <a
-                  href="profile-kelas.html"
+                  href="project/stand.html"
                   class="button-project inline-flex items-center gap-2 group/btn border-2 border-secondary py-2 px-2 rounded hover:bg-secondary hover:text-headline transition duration-300 ease-in-out"
                 >
                   <span>Detail</span>
@@ -886,7 +924,7 @@
     <!-- contact -->
     <section id="contact" class="mt-30 scroll-mt-20">
       <div class="text-center" data-aos="fade-up" data-aos-duration="800">
-        <h1 class="font-poppins text-3xl text-headline font-semibold">
+        <h1 class="font-nunito text-3xl text-headline font-semibold">
           Get In Touch
         </h1>
       </div>
