--- a/project/dewan-kesenian-blambangan.html
+++ b/project/dewan-kesenian-blambangan.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/output.css" />
-    <link rel="stylesheet" href="/dist/css/style.css" />
+    <link rel="stylesheet" href="dist/output.css" />
+    <link rel="stylesheet" href="dist/css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg-primary">
@@ -65,7 +65,7 @@
           <div class="">
             <div class="rounded-xl group overflow-hidden">
               <img
-                src="/dist/img/project/dkb/dkb.png"
+                src="dist/img/project/dkb/dkb.png"
                 class="object-cover rounded-xl group-hover:scale-110 duration-700 ease-in-out transition-transform"
               />
             </div>
