--- a/project/dewan-kesenian-blambangan.html
+++ b/project/dewan-kesenian-blambangan.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/output.css" />
-    <link rel="stylesheet" href="dist/css/style.css" />
+    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="../dist/css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body class="bg-primary">
@@ -31,7 +31,7 @@
         >
           <li class="inline-flex items-center">
             <a
-              href="/index.html"
+              href="index.html"
               class="inline-flex items-center text-lg font-medium text-headline hover:text-secondary transition-colors"
             >
               <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
@@ -65,7 +65,7 @@
           <div class="">
             <div class="rounded-xl group overflow-hidden">
               <img
-                src="dist/img/project/dkb/dkb.png"
+                src="../dist/img/project/dkb/dkb.png"
                 class="object-cover rounded-xl group-hover:scale-110 duration-700 ease-in-out transition-transform"
               />
             </div>
@@ -150,21 +150,21 @@
               <div class="grid md:grid-cols-2 gap-5 mt-4">
                 <div class="group overflow-hidden rounded-xl h-full">
                   <img
-                    src="/dist/img/project/dkb/galeri/dkb-1.png"
+                    src="../dist/img/project/dkb/galeri/dkb-1.png"
                     class="group-hover:scale-110 transition-all ease-in-out duration-700 group-hover:brightness-50"
                     alt=""
                   />
                 </div>
                 <div class="group overflow-hidden rounded-xl h-full">
                   <img
-                    src="/dist/img/project/dkb/galeri/dkb-2.png"
+                    src="../dist/img/project/dkb/galeri/dkb-2.png"
                     class="group-hover:scale-110 transition-all ease-in-out duration-700 group-hover:brightness-50"
                     alt=""
                   />
                 </div>
                 <div class="group overflow-hidden rounded-xl h-full">
                   <img
-                    src="/dist/img/project/dkb/galeri/dkb-3.png"
+                    src="../dist/img/project/dkb/galeri/dkb-3.png"
                     class="group-hover:scale-110 transition-all ease-in-out duration-700 group-hover:brightness-50"
                     alt=""
                   />
