--- a/project/profil-kelas-xii-tkj-1.html
+++ b/project/profil-kelas-xii-tkj-1.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/output.css" />
-    <link rel="stylesheet" href="dist/css/style.css" />
+    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="../dist/css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
@@ -66,7 +66,7 @@
           <div class="">
             <div class="rounded-xl group overflow-hidden">
               <img
-                src="dist/img/project/kelas/kelas.png"
+                src="../dist/img/project/kelas/kelas.png"
                 class="object-cover rounded-xl group-hover:scale-110 duration-700 ease-in-out transition-transform"
               />
             </div>
@@ -152,21 +152,21 @@
               <div class="grid md:grid-cols-2 gap-5 mt-4">
                 <div class="group overflow-hidden rounded-xl">
                   <img
-                    src="dist/img/project/kelas/galeri/kelas-1.png"
+                    src="../dist/img/project/kelas/galeri/kelas-1.png"
                     class="group-hover:scale-110 transition-all ease-in-out duration-700 group-hover:brightness-50"
                     alt=""
                   />
                 </div>
                 <div class="group overflow-hidden rounded-xl">
                   <img
-                    src="dist/img/project/kelas/galeri/kelas-2.png"
+                    src="../dist/img/project/kelas/galeri/kelas-2.png"
                     class="group-hover:scale-110 transition-all ease-in-out duration-700 group-hover:brightness-50"
                     alt=""
                   />
                 </div>
                 <div class="group overflow-hidden rounded-xl">
                   <img
-                    src="dist/img/project/kelas/galeri/kelas-3.png"
+                    src="../dist/img/project/kelas/galeri/kelas-3.png"
                     class="group-hover:scale-110 transition-all ease-in-out duration-700 group-hover:brightness-50"
                     alt=""
                   />
