--- a/project/pengaduan-masyarakat.html
+++ b/project/pengaduan-masyarakat.html
@@ -26,7 +26,7 @@
     </div>
 
     <section class="mt-10">
-      <div class="max-w-5xl mx-auto w-full">
+      <div class="max-w-5xl mx-auto w-full px-4 md:px-0">
         <ol
           class="inline-flex items-center space-x-1 md:space-x-3 font-poppins"
         >
