--- a/project/profil-kelas-xii-tkj-1.html
+++ b/project/profil-kelas-xii-tkj-1.html
@@ -26,7 +26,7 @@
     </div>
 
     <section class="mt-10">
-      <div class="max-w-5xl mx-auto w-full">
+      <div class="max-w-5xl mx-auto w-full md:px-0 px-4">
         <ol
           class="inline-flex items-center space-x-1 md:space-x-3 font-poppins"
         >
